transmission/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: transmission
  namespace: transmission
  annotations:
    kubernetes.io/tls-acme: "true"
spec:
  rules:
    - host: transmission.skj.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: transmission
                port:
                  number: 9091
  tls:
    - hosts:
        - transmission.skj.dev
      secretName: transmission-skj-dev-cert
